grammar/.antlr/mxsParser.java
// Generated from e:\repos\maxscript-antlr4\grammar\mxsParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mxsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, AS=2, AT=3, BY=4, CASE=5, CATCH=6, COLLECT=7, DO=8, ELSE=9, EXIT=10, 
		FOR=11, FROM=12, IF=13, IN=14, OF=15, ON=16, OR=17, RETURN=18, SET=19, 
		THEN=20, THROW=21, TO=22, TRY=23, WHEN=24, WHERE=25, WHILE=26, WITH=27, 
		NOT=28, PUBLIC=29, PRIVATE=30, RoloutControl=31, FN=32, MAPPED=33, STRUCT=34, 
		VOID=35, BOOL=36, TIME=37, DECLARATION=38, GLOBAL_ID=39, DOTDOT=40, OBJECTSET=41, 
		EQ=42, ASSIGN=43, PLUS=44, MINUS=45, PROD=46, DIV=47, POW=48, COMPARE=49, 
		SHARP=50, COMMA=51, SEMI=52, DOUBLEDOT=53, DOT=54, AMP=55, LPAREN=56, 
		RPAREN=57, LCURLY=58, RCURLY=59, LBRACE=60, RBRACE=61, BITAND=62, DOLLAR=63, 
		UNDERSCORE=64, QUESTION=65, BACKSLASH=66, INT=67, DEG=68, HEX=69, STRING=70, 
		REF=71, DEREF=72, NAME=73, SINGLEQUOT=74, ALPHANUM=75, EOL=76, WS=77, 
		COMMENT=78, LINE_COMMENT=79;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_expr = 2, RULE_simple_expr = 3, 
		RULE_struct_def = 4, RULE_struct_member = 5, RULE_struct_scope = 6, RULE_event_handler = 7, 
		RULE_event_args = 8, RULE_fn_def = 9, RULE_args = 10, RULE_fn_return = 11, 
		RULE_try_expr = 12, RULE_while_loop = 13, RULE_do_loop = 14, RULE_for_loop = 15, 
		RULE_for_sequence = 16, RULE_for_action = 17, RULE_for_while = 18, RULE_for_where = 19, 
		RULE_loop_exit = 20, RULE_case_expr = 21, RULE_case_item = 22, RULE_if_expr = 23, 
		RULE_var_decl = 24, RULE_decl = 25, RULE_assignment = 26, RULE_destination = 27, 
		RULE_logic_expr = 28, RULE_logical_operand = 29, RULE_compare_expr = 30, 
		RULE_compare_operand = 31, RULE_math_expr = 32, RULE_math_operand = 33, 
		RULE_fn_call = 34, RULE_param = 35, RULE_param_name = 36, RULE_operand = 37, 
		RULE_propertyOrIndex = 38, RULE_property = 39, RULE_index = 40, RULE_factor = 41, 
		RULE_unary_minus = 42, RULE_expr_seq = 43, RULE_box2 = 44, RULE_point3 = 45, 
		RULE_point2 = 46, RULE_bitArray = 47, RULE_bitList = 48, RULE_array = 49, 
		RULE_elementList = 50, RULE_var_name = 51, RULE_by_ref = 52, RULE_name_value = 53, 
		RULE_path = 54, RULE_path_name = 55, RULE_levels = 56, RULE_level_name = 57, 
		RULE_bool = 58, RULE_time = 59, RULE_number = 60, RULE_string = 61;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "expr", "simple_expr", "struct_def", "struct_member", 
			"struct_scope", "event_handler", "event_args", "fn_def", "args", "fn_return", 
			"try_expr", "while_loop", "do_loop", "for_loop", "for_sequence", "for_action", 
			"for_while", "for_where", "loop_exit", "case_expr", "case_item", "if_expr", 
			"var_decl", "decl", "assignment", "destination", "logic_expr", "logical_operand", 
			"compare_expr", "compare_operand", "math_expr", "math_operand", "fn_call", 
			"param", "param_name", "operand", "propertyOrIndex", "property", "index", 
			"factor", "unary_minus", "expr_seq", "box2", "point3", "point2", "bitArray", 
			"bitList", "array", "elementList", "var_name", "by_ref", "name_value", 
			"path", "path_name", "levels", "level_name", "bool", "time", "number", 
			"string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'as'", "'at'", "'by'", "'case'", "'catch'", "'collect'", 
			"'do'", "'else'", "'exit'", "'for'", "'from'", "'if'", "'in'", "'of'", 
			"'on'", "'or'", "'return'", "'set'", "'then'", "'throw'", "'to'", "'try'", 
			"'when'", "'where'", "'while'", "'with'", "'not'", "'public'", "'private'", 
			null, null, "'mapped'", "'struct'", null, null, null, null, "'::'", "'..'", 
			null, "'='", null, "'+'", "'-'", "'*'", "'/'", "'^'", null, "'#'", "','", 
			"';'", "':'", "'.'", "'''", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"'&'", "'$'", "'_'", "'?'", "'\\'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "AS", "AT", "BY", "CASE", "CATCH", "COLLECT", "DO", "ELSE", 
			"EXIT", "FOR", "FROM", "IF", "IN", "OF", "ON", "OR", "RETURN", "SET", 
			"THEN", "THROW", "TO", "TRY", "WHEN", "WHERE", "WHILE", "WITH", "NOT", 
			"PUBLIC", "PRIVATE", "RoloutControl", "FN", "MAPPED", "STRUCT", "VOID", 
			"BOOL", "TIME", "DECLARATION", "GLOBAL_ID", "DOTDOT", "OBJECTSET", "EQ", 
			"ASSIGN", "PLUS", "MINUS", "PROD", "DIV", "POW", "COMPARE", "SHARP", 
			"COMMA", "SEMI", "DOUBLEDOT", "DOT", "AMP", "LPAREN", "RPAREN", "LCURLY", 
			"RCURLY", "LBRACE", "RBRACE", "BITAND", "DOLLAR", "UNDERSCORE", "QUESTION", 
			"BACKSLASH", "INT", "DEG", "HEX", "STRING", "REF", "DEREF", "NAME", "SINGLEQUOT", 
			"ALPHANUM", "EOL", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "mxsParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public mxsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(mxsParser.EOF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> EOL() { return getTokens(mxsParser.EOL); }
		public TerminalNode EOL(int i) {
			return getToken(mxsParser.EOL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CASE) | (1L << DO) | (1L << EXIT) | (1L << FOR) | (1L << IF) | (1L << ON) | (1L << RETURN) | (1L << TRY) | (1L << WHILE) | (1L << NOT) | (1L << FN) | (1L << MAPPED) | (1L << STRUCT) | (1L << BOOL) | (1L << TIME) | (1L << DECLARATION) | (1L << MINUS) | (1L << SHARP) | (1L << LPAREN) | (1L << LBRACE) | (1L << DOLLAR))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (QUESTION - 65)) | (1L << (INT - 65)) | (1L << (DEG - 65)) | (1L << (HEX - 65)) | (1L << (STRING - 65)) | (1L << (REF - 65)) | (1L << (DEREF - 65)) | (1L << (NAME - 65)) | (1L << (SINGLEQUOT - 65)) | (1L << (ALPHANUM - 65)))) != 0)) {
				{
				setState(128);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(124);
					expr();
					}
					break;
				case 2:
					{
					setState(125);
					expr();
					setState(126);
					match(EOL);
					}
					break;
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode EOL() { return getToken(mxsParser.EOL, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				expr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				expr();
				setState(137);
				match(EOL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Simple_exprContext simple_expr() {
			return getRuleContext(Simple_exprContext.class,0);
		}
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public Do_loopContext do_loop() {
			return getRuleContext(Do_loopContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public Loop_exitContext loop_exit() {
			return getRuleContext(Loop_exitContext.class,0);
		}
		public Case_exprContext case_expr() {
			return getRuleContext(Case_exprContext.class,0);
		}
		public Try_exprContext try_expr() {
			return getRuleContext(Try_exprContext.class,0);
		}
		public Fn_defContext fn_def() {
			return getRuleContext(Fn_defContext.class,0);
		}
		public Fn_returnContext fn_return() {
			return getRuleContext(Fn_returnContext.class,0);
		}
		public Struct_defContext struct_def() {
			return getRuleContext(Struct_defContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				simple_expr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				var_decl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				assignment();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				if_expr();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(145);
				while_loop();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(146);
				do_loop();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(147);
				for_loop();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(148);
				loop_exit();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(149);
				case_expr();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(150);
				try_expr();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(151);
				fn_def();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(152);
				fn_return();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(153);
				struct_def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_exprContext extends ParserRuleContext {
		public Math_exprContext math_expr() {
			return getRuleContext(Math_exprContext.class,0);
		}
		public Compare_exprContext compare_expr() {
			return getRuleContext(Compare_exprContext.class,0);
		}
		public Logic_exprContext logic_expr() {
			return getRuleContext(Logic_exprContext.class,0);
		}
		public Simple_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_expr; }
	}

	public final Simple_exprContext simple_expr() throws RecognitionException {
		Simple_exprContext _localctx = new Simple_exprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_expr);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				math_expr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				compare_expr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(158);
				logic_expr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_defContext extends ParserRuleContext {
		public TerminalNode STRUCT() { return getToken(mxsParser.STRUCT, 0); }
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(mxsParser.LPAREN, 0); }
		public List<Struct_memberContext> struct_member() {
			return getRuleContexts(Struct_memberContext.class);
		}
		public Struct_memberContext struct_member(int i) {
			return getRuleContext(Struct_memberContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(mxsParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(mxsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(mxsParser.COMMA, i);
		}
		public Struct_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_def; }
	}

	public final Struct_defContext struct_def() throws RecognitionException {
		Struct_defContext _localctx = new Struct_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_struct_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(STRUCT);
			setState(162);
			var_name();
			setState(163);
			match(LPAREN);
			setState(164);
			struct_member();
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(165);
				match(COMMA);
				setState(166);
				struct_member();
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(172);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_memberContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public Struct_scopeContext struct_scope() {
			return getRuleContext(Struct_scopeContext.class,0);
		}
		public Fn_defContext fn_def() {
			return getRuleContext(Fn_defContext.class,0);
		}
		public Event_handlerContext event_handler() {
			return getRuleContext(Event_handlerContext.class,0);
		}
		public Struct_memberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_member; }
	}

	public final Struct_memberContext struct_member() throws RecognitionException {
		Struct_memberContext _localctx = new Struct_memberContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_struct_member);
		int _la;
		try {
			setState(186);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUBLIC || _la==PRIVATE) {
					{
					setState(174);
					struct_scope();
					}
				}

				setState(177);
				decl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUBLIC || _la==PRIVATE) {
					{
					setState(178);
					struct_scope();
					}
				}

				setState(181);
				fn_def();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUBLIC || _la==PRIVATE) {
					{
					setState(182);
					struct_scope();
					}
				}

				setState(185);
				event_handler();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_scopeContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(mxsParser.PUBLIC, 0); }
		public TerminalNode PRIVATE() { return getToken(mxsParser.PRIVATE, 0); }
		public Struct_scopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_scope; }
	}

	public final Struct_scopeContext struct_scope() throws RecognitionException {
		Struct_scopeContext _localctx = new Struct_scopeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_struct_scope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_la = _input.LA(1);
			if ( !(_la==PUBLIC || _la==PRIVATE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Event_handlerContext extends ParserRuleContext {
		public TerminalNode ON() { return getToken(mxsParser.ON, 0); }
		public Event_argsContext event_args() {
			return getRuleContext(Event_argsContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DO() { return getToken(mxsParser.DO, 0); }
		public TerminalNode RETURN() { return getToken(mxsParser.RETURN, 0); }
		public Event_handlerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event_handler; }
	}

	public final Event_handlerContext event_handler() throws RecognitionException {
		Event_handlerContext _localctx = new Event_handlerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_event_handler);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(ON);
			setState(191);
			event_args();
			setState(192);
			_la = _input.LA(1);
			if ( !(_la==DO || _la==RETURN) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(193);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Event_argsContext extends ParserRuleContext {
		public Event_argsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_event_args; }
	 
		public Event_argsContext() { }
		public void copyFrom(Event_argsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Event_typeContext extends Event_argsContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public Event_typeContext(Event_argsContext ctx) { copyFrom(ctx); }
	}
	public static class Event_target_type_argsContext extends Event_argsContext {
		public List<Var_nameContext> var_name() {
			return getRuleContexts(Var_nameContext.class);
		}
		public Var_nameContext var_name(int i) {
			return getRuleContext(Var_nameContext.class,i);
		}
		public Event_target_type_argsContext(Event_argsContext ctx) { copyFrom(ctx); }
	}
	public static class Event_target_typeContext extends Event_argsContext {
		public List<Var_nameContext> var_name() {
			return getRuleContexts(Var_nameContext.class);
		}
		public Var_nameContext var_name(int i) {
			return getRuleContext(Var_nameContext.class,i);
		}
		public Event_target_typeContext(Event_argsContext ctx) { copyFrom(ctx); }
	}

	public final Event_argsContext event_args() throws RecognitionException {
		Event_argsContext _localctx = new Event_argsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_event_args);
		int _la;
		try {
			setState(206);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				_localctx = new Event_typeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(195);
				var_name();
				}
				break;
			case 2:
				_localctx = new Event_target_typeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(196);
				var_name();
				setState(197);
				var_name();
				}
				break;
			case 3:
				_localctx = new Event_target_type_argsContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(199);
				var_name();
				setState(200);
				var_name();
				setState(202); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(201);
					var_name();
					}
					}
					setState(204); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SINGLEQUOT || _la==ALPHANUM );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fn_defContext extends ParserRuleContext {
		public TerminalNode FN() { return getToken(mxsParser.FN, 0); }
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public TerminalNode EQ() { return getToken(mxsParser.EQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode MAPPED() { return getToken(mxsParser.MAPPED, 0); }
		public List<ArgsContext> args() {
			return getRuleContexts(ArgsContext.class);
		}
		public ArgsContext args(int i) {
			return getRuleContext(ArgsContext.class,i);
		}
		public List<Param_nameContext> param_name() {
			return getRuleContexts(Param_nameContext.class);
		}
		public Param_nameContext param_name(int i) {
			return getRuleContext(Param_nameContext.class,i);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public Fn_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fn_def; }
	}

	public final Fn_defContext fn_def() throws RecognitionException {
		Fn_defContext _localctx = new Fn_defContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fn_def);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MAPPED) {
				{
				setState(208);
				match(MAPPED);
				}
			}
